--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "boilerplate for apps",
   "main": "index.js",
   "scripts": {
+    "setup": "./bin/setup",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack -w & nodemon server/start.js"
   },
